# django-webpack-alpine-tailwind-template

./: .gitignore  README.md  package.json  pyproject.toml  tailwind.config.js  webpack.config.js
apps/: settings.py  urls.py  wsgi.py
apps/pages/templates/pages/: index.html
assets/: app.js
src/: README.md  manage.py
src/tixxpass/: asgi.py  settings.py  urls.py  wsgi.py
